# dirtforever

./: .gitignore  HANDOFF.md  LICENSE  README.md  build.sh  build_exe.py  dirtforever-web.service  dirtforever.py  run.sh  server.py  start.sh
.github/workflows/: release.yml  typecheck.yml
dr2server/: __init__.py  account_store.py  api_client.py  dispatcher.py  egonet.py  game_data.py  httpd.py  models.py  tuning.py
notes/: classes.txt  how_to_control_game.md  locations.txt  protocol_notes.md
scripts/: ahi_devices.txt  apply_track_refactor.py  build_batch3.py  build_batch5.py  crop.py  dr2_control.ahk  dump_ahi_devices.ahk  emit_new_tracks.py  focus_game.ahk  gen_track_enum.py  generate_dev_cert.py  install.ps1  install_dev_cert.ps1  locid_brute_force.py  locid_post_ocr.py  merge_probes.py  probe_header_loop.py  probe_loop.py  remove_windows_redirect.ps1  run_ahi_probe.ps1  run_game_flow.ps1  run_server_debug.sh  send_key.ahk  setup_windows_redirect.ps1  shot.sh  tt_map_all.py  tt_smart_probe.py  tt_track_cycle.py  watch_testing.py
web/: .env.example  CLUB_EVENTS_SPEC.md  STYLE_GUIDE.md  events_generator.py  pyproject.toml  server.py
web/dirtforever_web.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/static/: enhance.js  style.css
web/templates/: about.html  account.html  base.html  club_detail.html  club_invite_landing.html  clubs.html  dashboard.html  event_detail.html  events.html  forgot_password.html  home.html  install.html  leaderboards.html  login.html  notifications.html  profile.html  register.html  reset_password.html  verify_email.html
(+11 files in other folders)
