[project]
name = "dirtforever-web"
version = "0.1.0"
description = "DirtForever web frontend"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-wtf>=1.2.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = ".."
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = "flask_wtf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dr2server.*"
follow_imports = "silent"
